[package]
name = "framing"
description = "Fast frames for video and images."
keywords = ["video", "image", "frame", "pixel", "transform"]
repository = "https://github.com/quadrupleslap/framing"
documentation = "https://docs.rs/framing"
license = "MIT"
version = "0.3.5"
authors = ["Ram <quadrupleslap@gmail.com>"]

[dependencies]
clamp = "0.1"
rayon = "0.8"
