[package]
name = "framing"
description = "Fast frames for video and images."
keywords = ["video", "image", "frame", "pixel", "transform"]
repository = "https://github.com/endogeny/framing"
documentation = "https://docs.rs/framing"
license = "MIT"
version = "0.6.1"
authors = ["Ram <quadrupleslap@gmail.com>"]

[dependencies]
rayon = "1.5.1"
